<resources>
    <string name="app_name">ArtImage</string>
    <string name="title_activity_onboarding">OnboardingActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="facebook_app_id">806217370967089</string>
    <string name="client_token">3163b506dd62a0739b8a18d793c8f467</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="continue_button">Continue</string>
    <string name="create_original_photos_from_aimuse">Create original photos from AIMuse</string>
    <string name="turn_your_photos_into_a_work_of_art_with_the_help_of_ai">Turn your photos into a work of art with the help of AI</string>


    <!-- Следить аккуратно за этими стрингами -->
    <string name="a_woman_sitting_on_a_bench_face_in_profile">A woman sitting on a bench,\n face in profile</string>
    <string name="beautiful_face_art_abstractionism">Beautiful face, art, abstractionism</string>
    <string name="glitter_on_the_cheeks">glitter on the cheeks</string>
    <string name="cartoon_face_sunny_weather">Cartoon face, sunny weather</string>
    <!-- Следить аккуратно за этими стрингами -->
    <string name="describe_what_would_you_like_to_see">Describe what would you\n like to see</string>
    <string name="ai_will_draw_high_quality_images_that_you_can_use_the_way_you_want">AI will draw high-quality images \nthat you can use the way you want</string>
    <string name="anime">anime</string>
    <string name="colorful">colorful</string>
    <string name="abstractionism">abstractionism</string>
    <string name="disco">disco</string>
    <string name="abstracts">abstract</string>
    <string name="title_activity_subscription">SubscriptionActivity</string>
    <string name="aimuse_pro">AIMuse PRO</string>
    <string name="access_to_all_features">Access to all features</string>
    <string name="fast_image_processing">Fast image processing</string>
    <string name="start_free_trial">Start free trial</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="privace_policy">Privacy policy</string>
    <string name="per">per</string>
    <string name="start_your">Start your</string>
    <string name="get">Get</string>
    <string name="free_trial">free trial</string>
    <string name="first_label_week">After the </string>
    <string name="first_label_week2"> free trial this subscription automatically renews for </string>
    <string name="second_label_week"> unless it is cancelled at least 24 hours before the end of the trial period. The subscription includes recurring payments. Cancel anytime in the Google Play Store</string>
    <string name="label_month_first">Instant payment. The subscription includes recurring payments </string>
    <string name="label_month_second">  Cancel anytime in the Google Play Store</string>
    <string name="activate_subscribe"><![CDATA[Activate & Subscribe]]></string>
    <string name="subscription">subscription</string>
    <string name="label_period_cancel">Periodic payment ･ Cancel anytime in Google Play</string>
    <string name="free">free</string>
    <string name="then">then</string>
    <string name="unlimited_art_creation">Unlimited art creation</string>
    <string name="no_ads_no_watermarks"><![CDATA[No Ads & No Watermarks]]></string>
</resources>