<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".onboarding.AnimeFragment">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="@dimen/_350sdp"
        android:src="@drawable/mask_5"
        android:scaleType="fitXY"
        android:layout_marginTop="@dimen/_77sdp"
        android:layout_marginEnd="@dimen/_26sdp"
        android:layout_marginStart="@dimen/_26sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/anime"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_22sdp"
        android:background="@drawable/selected_frame"
        android:layout_marginTop="@dimen/_39sdp"
        android:text="@string/anime"
        android:layout_marginStart="@dimen/_minus10sdp"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:fontFamily="@font/poppins"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/abstracts"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_22sdp"
        android:background="@drawable/unselected_frame"
        android:text="@string/abstracts"
        android:textColor="@color/gray"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:fontFamily="@font/poppins"
        app:layout_constraintEnd_toStartOf="@+id/disco"
        app:layout_constraintStart_toEndOf="@+id/anime"
        app:layout_constraintTop_toTopOf="@+id/anime" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/disco"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_22sdp"
        android:textColor="@color/gray"
        android:background="@drawable/unselected_frame"
        android:text="@string/disco"
        android:layout_marginEnd="@dimen/_minus10sdp"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:fontFamily="@font/poppins"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/abstracts" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/abstractionism"
        android:layout_width="@dimen/_110sdp"
        android:layout_height="@dimen/_22sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:background="@drawable/unselected_frame"
        android:layout_marginTop="@dimen/_14sdp"
        android:textColor="@color/gray"
        android:text="@string/abstractionism"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:fontFamily="@font/poppins"
        app:layout_constraintStart_toStartOf="@+id/anime"
        app:layout_constraintTop_toBottomOf="@+id/anime" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/colorful"
        android:layout_width="@dimen/_110sdp"
        android:layout_height="@dimen/_22sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:background="@drawable/unselected_frame"
        android:textColor="@color/gray"
        android:textSize="14sp"
        android:fontFamily="@font/poppins"
        android:text="@string/colorful"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/disco"
        app:layout_constraintTop_toTopOf="@+id/abstractionism" />
</androidx.constraintlayout.widget.ConstraintLayout>