<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".onboarding.DescribeFragment">


    <ImageView
        android:id="@+id/recycleView"
        android:layout_width="0dp"
        android:layout_height="@dimen/_430sdp"
        android:layout_marginStart="@dimen/_minus15sdp"
        android:layout_marginEnd="@dimen/_minus15sdp"
        android:fitsSystemWindows="true"
        android:scaleType="fitXY"
        android:src="@drawable/describe_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_minus20sdp"
        android:gravity="center"

        android:textSize="22sp"
        android:fontFamily="@font/poppins"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:text="@string/describe_what_would_you_like_to_see"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycleView" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:layout_marginTop="@dimen/_9sdp"
        android:text="@string/ai_will_draw_high_quality_images_that_you_can_use_the_way_you_want"
        android:textSize="14sp"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginEnd="@dimen/_140sdp"
        android:textSize="12sp"
        android:layout_marginStart="@dimen/_1sdp"
        android:gravity="center"
        android:fontFamily="@font/poppins"
        android:text="@string/a_woman_sitting_on_a_bench_face_in_profile"
        app:layout_constraintBottom_toBottomOf="@+id/recycleView"
        app:layout_constraintEnd_toEndOf="@+id/recycleView"
        app:layout_constraintStart_toStartOf="@+id/recycleView"
        app:layout_constraintTop_toTopOf="@+id/recycleView"
        app:layout_constraintHorizontal_bias="0.203"
        app:layout_constraintVertical_bias="0.49" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="12sp"
        android:text="@string/beautiful_face_art_abstractionism"
        android:layout_marginTop="@dimen/_251sdp"
        android:layout_marginBottom="@dimen/_143sdp"
        android:gravity="center"
        android:fontFamily="@font/poppins"
        android:layout_marginStart="@dimen/_170sdp"
        android:layout_marginEnd="@dimen/_48sdp"
        app:layout_constraintBottom_toBottomOf="@+id/recycleView"
        app:layout_constraintEnd_toEndOf="@+id/recycleView"
        app:layout_constraintHorizontal_bias="0.618"
        app:layout_constraintStart_toStartOf="@+id/recycleView"
        app:layout_constraintTop_toTopOf="@+id/recycleView"
        app:layout_constraintVertical_bias="0.659" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_172sdp"
        android:textSize="12sp"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/glitter_on_the_cheeks"
        app:layout_constraintBottom_toBottomOf="@+id/recycleView"
        app:layout_constraintEnd_toEndOf="@+id/recycleView"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toStartOf="@+id/recycleView"
        app:layout_constraintTop_toTopOf="@+id/recycleView"
        app:layout_constraintVertical_bias="0.816" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_120sdp"
        android:layout_marginEnd="@dimen/_80sdp"
        android:textSize="9sp"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/cartoon_face_sunny_weather"
        app:layout_constraintBottom_toBottomOf="@+id/recycleView"
        app:layout_constraintEnd_toEndOf="@+id/recycleView"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toStartOf="@+id/recycleView"
        app:layout_constraintTop_toTopOf="@+id/recycleView"
        app:layout_constraintVertical_bias="0.12" />


</androidx.constraintlayout.widget.ConstraintLayout>