<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="@dimen/_360sdp"
        android:scaleType="fitXY"
        android:src="@drawable/subscription_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:layout_width="0dp"
        android:layout_height="@dimen/_380sdp"
        android:scaleType="fitXY"
        android:src="@drawable/subscription_sub_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_267sdp"
        android:gravity="center"
        android:text="@string/aimuse_pro"
        android:fontFamily="@font/poppins"
        android:layout_marginEnd="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_30sdp"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/access_to_all_features"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:gravity="center"
        android:fontFamily="@font/poppins"
        app:layout_constraintEnd_toEndOf="@+id/textView12"
        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:fontFamily="@font/poppins"
        android:text="@string/fast_image_processing"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/textView13"
        app:layout_constraintHorizontal_bias="0.57"
        app:layout_constraintStart_toStartOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/_16sdp"
        android:layout_height="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/textView14"
        app:layout_constraintEnd_toStartOf="@+id/textView14"
        app:layout_constraintTop_toTopOf="@+id/textView14"
        app:srcCompat="@drawable/check_box_icon" />


    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:fontFamily="@font/poppins"
        android:text="@string/unlimited_art_creation"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/textView13"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="@dimen/_16sdp"
        android:layout_height="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/textView15"
        app:layout_constraintEnd_toStartOf="@+id/textView15"
        app:layout_constraintTop_toTopOf="@+id/textView15"
        app:srcCompat="@drawable/check_box_icon" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:fontFamily="@font/poppins"
        android:text="@string/no_ads_no_watermarks"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/textView13"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="@dimen/_16sdp"
        android:layout_height="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/textView16"
        app:layout_constraintEnd_toStartOf="@+id/textView16"
        app:layout_constraintTop_toTopOf="@+id/textView16"
        app:srcCompat="@drawable/check_box_icon" />

    <TextView
        android:id="@+id/labelTrial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:fontFamily="@font/poppins"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <TextView
        android:id="@+id/subLabelTrial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:fontFamily="@font/poppins"
        android:textStyle="bold"
        android:text=""
        app:layout_constraintEnd_toEndOf="@+id/labelTrial"
        app:layout_constraintStart_toStartOf="@+id/labelTrial"
        app:layout_constraintTop_toBottomOf="@+id/labelTrial" />


    <TextView
        android:id="@+id/textSubDescription"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito"
        android:gravity="center"
        android:text=""
        android:textColor="@android:color/white"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonContinue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subLabelTrial" />

    <TextView
        android:id="@+id/terms_of_use"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito"
        android:gravity="center"
        android:text="@string/terms_of_use"
        android:textColor="@color/privace_policy"
        android:textSize="@dimen/_8sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="@+id/buttonContinue"
        app:layout_constraintTop_toBottomOf="@+id/buttonContinue"
        app:layout_constraintVertical_bias="0.391" />



    <TextView
        android:id="@+id/privace_policy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito"
        android:gravity="center"
        android:text="@string/privace_policy"
        android:textColor="@color/privace_policy"
        android:textSize="@dimen/_8sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonContinue"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonContinue"
        app:layout_constraintVertical_bias="0.375" />



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonContinue"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginBottom="@dimen/_30sdp"
        android:background="@drawable/btn_continue"
        android:fontFamily="@font/nunito"
        android:gravity="center"
        android:letterSpacing="-0.0099"
        android:text=""
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/closeButtonSubscription"
        android:layout_width="@dimen/_16sdp"
        android:layout_height="@dimen/_16sdp"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/_50sdp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="4dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/close_subscription" />


    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gifView"
        android:layout_width="@dimen/_190sdp"
        android:layout_height="@dimen/_100sdp"
        android:src="@drawable/loading_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:scaleType="fitXY"
        app:layout_constraintHorizontal_bias="0.546"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16"
        app:layout_constraintVertical_bias="0.136" />

</androidx.constraintlayout.widget.ConstraintLayout>